Fix textalign on box text/remove box 1 border

--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ h3 {
     font-size: 10px;
     width: 100px;
     padding-top: 5px;
+    text-align: center;
 
 
 }
@@ -175,7 +176,7 @@ h3 {
     
 }
 
-button:last-child {
+button:nth-of-type(2) {
     border: 1px solid white;
     height: 30px;
     
